# sciplot-academic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FINAL_CODE_REVIEW_REPORT.md  PROJECT_RULES.md  README.md  SKILL.md  publish.py  pyproject.toml  pytest.ini  sciplot_code_review.md  test_v1_8_syntax_sugar.py  verify_fixes.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pr_template.md
.github/copilot-instructions/: en.md  zh.md
.github/workflows/: ci.yml  publish.yml
.trae/rules/: framework.md
.trae/specs/comprehensive-code-review/: checklist.md  spec.md  tasks.md
.trae/specs/palette-and-norm-fix/: checklist.md  spec.md  tasks.md
docs/: conf.py  index.rst
docs/plans/: 2026-04-17-extension-roadmap-design.md
sciplot/: __init__.py
sciplot-skill/: SKILL.md
sciplot-skill/references/: charts.md  color-schemes.md  color-style.md  core-functions.md  extensions.md  full-api.md  recipes.md  syntax-sugar.md
sciplot/_core/: __init__.py  config.py  context.py  fluent.py  layout.py  palette.py  result.py  style.py  types.py  utils.py
sciplot/_ext/: __init__.py  hierarchical.py  ml.py  network.py  plot3d.py  venn.py
sciplot/_plots/: __init__.py  advanced.py  aliases.py  basic.py  distribution.py  multivariate.py  polar.py  statistical.py  timeseries.py
sciplot/utils/: __init__.py  smart.py
showcase/: 01_multi_line.py  02_grouped_bar.py  03_scatter_regression.py  04_violin_box.py  05_heatmap.py  06_timeseries.py  07_radar.py  08_density.py  09_pca.py  10_3d_surface.py  11_network.py  12_multi_panel.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_3d_extensions.py  test_aliases_consistency.py  test_basic_charts.py  test_config_system.py  test_core_hardening.py  test_design_consistency.py  test_distribution_charts.py  test_fluent_chain.py  test_layout.py  test_ml_extensions.py  test_multivariate.py  test_negative_indexing.py  test_palette.py  test_paper_sizes.py  test_parameters.py  test_result_types.py  test_return_types.py  test_round10_hardening.py  test_round11_hardening.py  test_round12_hardening.py  test_round2_hardening.py  test_round3_hardening.py  test_round4_hardening.py  test_round5_hardening.py  test_round6_hardening.py  test_round7_hardening.py  test_round8_hardening.py  test_round9_hardening.py  test_smart_tools.py  test_statistical_advanced.py  test_style.py  test_syntax_sugar.py  test_timeseries_advanced.py  test_utils_colors.py  test_validation.py
