[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sciplot-academic"
dynamic = ["version"]
description = "中文科研绘图库 — 基于 Matplotlib，专为中文论文场景优化"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "SciPlot Team", email = "sciplot@github.com" }
]
keywords = [
    "matplotlib", "scientific-plotting", "academic", "publication",
    "nature", "ieee", "thesis", "chinese"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.5.0",
    "networkx>=3.1",
    "numpy>=1.20.0",
    "scienceplots>=2.1.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "coverage[toml]",
]
lint = [
    "ruff>=0.5",
    "pre-commit",
]
typing = [
    "mypy>=1.10",
]
doc = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.14",
    "numpydoc>=1.0",
    "sphinx-gallery>=0.17",
]
dev = [
    "build",
    "twine",
    "sciplot-academic[test,lint,typing,doc]",
]
ml = [
    "scikit-learn>=1.0.0",
]
stats = [
    "scipy>=1.10.1",
]
network = [
    "networkx>=2.6.0",
]
venn = [
    "matplotlib-venn>=0.11.0",
]
all = [
    "scikit-learn>=1.0.0",
    "scipy>=1.10.1",
    "networkx>=2.6.0",
    "matplotlib-venn>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/rippleshe/sciplot-academic"
Repository = "https://github.com/rippleshe/sciplot-academic"
Documentation = "https://sciplot.readthedocs.io"
Issues = "https://github.com/rippleshe/sciplot-academic/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sciplot*"]
exclude = ["tests*", "examples*", "dist*"]

[tool.setuptools.package-data]
sciplot = ["py.typed"]

[tool.setuptools_scm]
fallback_version = "0.0.0+unknown"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "regression: marks tests as regression tests",
    "requires_ml: marks tests that require ML extension",
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "NPY"]
ignore = [
    "E402",  # Module level import not at top of file (needed for __init__.py with version checks)
    "F401",  # Imported but unused (for __all__ exports and internal imports)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["sciplot"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["sciplot"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
    "pass",
    "\\.\\.\\.",
]
